--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/eventos?serverTimezone=UTC
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update 
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
